# advent-of-code-2023

./: Cargo.toml  Makefile  README.md
day-1-trebuchet/: Cargo.toml
day-1-trebuchet/src/: main.rs
day-2-cube-conundrum/: Cargo.toml
day-2-cube-conundrum/src/: part1.rs  part2.rs
day-3-gear-ratios/: Cargo.toml
day-3-gear-ratios/src/: main.rs  part1.rs  part2.rs
day-4-scratchcards/: Cargo.toml
day-4-scratchcards/src/: main.rs  part1.rs  part2.rs
day-5-seed-fertilizer/: Cargo.toml
day-5-seed-fertilizer/benches/: benchmark.rs
day-5-seed-fertilizer/src/: main.rs  part1.rs  part2.rs
day-6-wait-for-it/: Cargo.toml
day-6-wait-for-it/benches/: benchmark.rs
day-6-wait-for-it/src/: main.rs  part1.rs  part2.rs
day-7-camel-cards/: Cargo.toml  dhat-heap.json
day-7-camel-cards/benches/: benchmark.rs
day-7-camel-cards/src/: main.rs  part1.rs  part2.rs
day-8-haunted-wasteland/: Cargo.toml
day-8-haunted-wasteland/benches/: benchmark.rs
day-8-haunted-wasteland/src/: part1.rs  part2.rs
day-9-mirage-maintenance/: Cargo.toml
day-9-mirage-maintenance/benches/: benchmark.rs
day-9-mirage-maintenance/src/: part1.rs  part2.rs
template/: Cargo.toml
template/src/: part1.rs  part2.rs
