[package]
name = "day-5-seed-fertilizer"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[dependencies]
rayon = "1.8.0"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
